# lna

./: .envrc  CMakeLists.txt  CONTRIBUTING.org  README.org  idf_component.yml
bench/: CMakeLists.txt  bench_test.cpp~
cmake/: lna_sources.cmake  lna_sources.cmake~  lna_warnings.cmake
examples/: README.org
examples/desktop/: CMakeLists.txt  README.org
examples/desktop/common/: test_common.c
examples/esp32/: README.org
examples/esp32/basic/: CMakeLists.txt
examples/esp32/basic/main/: CMakeLists.txt  hello_world_main.c
examples/esp32/components/common/: CMakeLists.txt
examples/esp32/components/common/include/: lna_common.h
examples/esp32/components/common/src/: lna_common.c
examples/esp32/components/lna/: CMakeLists.txt
include/: equation.h  hello_component.h  lna_arena.h  lna_matrix.h  lna_model.h  lna_number.h  matrix.hpp
src/: equation.c  hello_component.c  lna_arena.c  lna_matrix.c
tests/: CMakeLists.txt  README.org
